--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.0",
     "chance": "^1.1.8",
     "express": "^4.18.1",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
